--- a/blank.yml
+++ b/blank.yml
@@ -15,5 +15,5 @@ Everyday You asks ALLAH Almight for forgiveness for the sins you have committed,
 
 "Everyday might be normal for you without me. But its so difficult for me to survive even just a MINUTE without you"
 
-**PLEASE FORGIVE ME AZU**
+**PLEASE FORGIVE ME AZU - IN MY HEART, FOREVER**
 https://youtu.be/gFM4r5oO-3c
